# JoPhysicsEngine

./: .gitignore  CMakeLists.txt
BasicsZuPhysicsEngines/: Basics.txt
include/: JoQuaternion.hpp  JoVecs.hpp  JoVecsTemplated.hpp
src/: JoVecs.cpp  PyJonsics.cpp
tests/: CMakeLists.txt  JoVecsTest.cpp
